--- a/de.html
+++ b/de.html
@@ -539,38 +539,56 @@
       </p>
       <span class="display-mobile">Willkommen, Freunde aus <span id="location2">aller Welt</span> :-)</br></br></span>
       <p align="justify">
-        Derzeit arbeitet Dr. Hong Xu als <strong>F&E-Ingenieur</strong> und spezialisiert sich auf
-        <strong>e-Power-Systeme</strong> mit Sitz in München, engagiert für die Erreichung der Klimaneutralität in den
-        Sektoren <strong>Energie</strong> und <strong>Transport</strong>. Im Laufe seiner Karriere hat er mit
-        internationalen Unternehmen und akademischen Institutionen in Europa und China zusammengearbeitet, über
-        <strong><span class="no_of_papers"></span> veröffentlichte Artikel</strong> und <strong><span
-            class="no_of_patents"></span> erteilte
-          Patente</strong> erzielt. Zudem leitete er eine Sitzung auf der <strong><a href="https://unfccc.int/"
-            target="_blank">UN-Klimakonferenz</a></strong> in Bonn, nahm an der Expertengruppe der <strong><a
-            href="https://unece.org/" target="_blank">UN-Wirtschaftskommission für Europa</a></strong> in Genf teil und
-        war Mitglied der <strong>Akademischen Jury</strong> beim <strong><a href="https://symposium.org/"
-            target="_blank">St. Gallen Symposium</a></strong> in der Schweiz. Dr. Xu ist außerdem
-        Peer-<strong>Reviewer</strong> für mehrere hochrangige Zeitschriften in den Bereichen <strong>Energie</strong>,
-        <strong>Transport</strong> und <strong>Nachhaltigkeit</strong>. Seine interdisziplinären Bemühungen wurden mit
-        Auszeichnungen wie dem Santander-Bank-Stipendium, ECS-Eingeladener Beitrag und Reisestipendium, Intel Edge
-        KI-Stipendium und Erasmus-Stipendium anerkannt.
-      </p>
+        Derzeit ist Dr. Hong Xu ein engagierter <strong>Forscher</strong> und <strong>Ingenieur</strong>, der sich auf
+        <strong>erneuerbare Energien</strong> und <strong>e-Power-Systeme</strong> spezialisiert hat und nach
+        Effizienzexzellenz und
+        Kohlenstoffneutralität in den Bereichen Energie und Verkehr strebt.
+        In den letzten 10 Jahren hat er mit
+        multinationalen Unternehmen und führenden Institutionen auf dem eurasischen Kontinent zusammengearbeitet und
+        technische
+        Fortschritte in den Bereichen <strong>e-Mobilität</strong>, <strong>saubere Energie</strong> und <strong>neue
+          Materialien</strong>
+        vorangetrieben, mit <strong><span class="no_of_papers"></span> veröffentlichten Artikeln</strong> und
+        <strong><span class="no_of_patents"></span> erteilten Patenten</strong>.
+        Neben seinen
+        ingenieurtechnischen Aktivitäten hat Dr. Xu
+        mit renommierten Organisationen, insbesondere dem St. Gallen Symposium, dem Salzburg Global Seminar, CITIC
+        Securities
+        und dem Oxford Institute for Energy Studies, zusammengearbeitet und sich auf die Analyse von sauberen
+        <strong>Energieökonomien
+          und -politiken</strong> in Asien und
+        Europa konzentriert. Als proaktiver Beitragender zur internationalen Entwicklung hat Dr. Xu als Mitglied der
+        Gruppe von Experten (GE)
+        bei der <strong><a href="https://unece.org/" target="_blank">UN-Wirtschaftskommission für Europa</a></strong>
+        (UNECE) in Genf
+        gedient und parallele Sitzungen bei der <strong><a href="https://unfccc.int/"
+            target="_blank">UN-Klimakonferenz</a></strong>
+        (UNFCCC) in Bonn geleitet und sich für die <strong><a href="https://sdgs.un.org/goals"
+            target="_blank">UN-Nachhaltigkeitsziele</a></strong>
+        (SDGs) <strong>7 </strong>(Erschwingliche Energie), <strong>9 </strong>(Industrieinnovation)
+        und <strong>13 </strong>(Maßnahmen zum Klimaschutz) eingesetzt.
 
       <p align="justify">
-        Er promovierte in <strong>Erneuerbare Energien</strong> an der <strong><a href="https://ethz.ch/en.html"
-            target="_blank">ETH Zürich</a></strong> in Zusammenarbeit mit dem <strong><a href="https://psi.ch"
-            target="_blank">Paul Scherrer Institut</a></strong> in der Schweiz. Zuvor erhielt er einen Master-Abschluss
-        in Materialwissenschaften von der <strong><a href="https://tum.de" target="_blank">Technischen Universität
-            München</a></strong> mit Praktika beim <strong><a href="https://xfel.eu" target="_blank">European
-            XFEL</a></strong> und bei <strong><a href="https://infineon.com" target="_blank">Infineon</a></strong> in
-        Deutschland. Dr. Xu's Leidenschaft für wirkungsvolle Forschung führte zu langfristigen Engagements mit
-        Branchenführern im Bereich Wasserstoff und Brennstoffzellen, einschließlich <strong>Toyota Motor</strong> in
-        Japan und der <strong>Freudenberg Gruppe</strong> in Deutschland. Parallel dazu verfolgte er einen
-        <strong>MBA</strong> an der <strong><a href="https://quantic.edu/mba" target="_blank">Quantischen Schule für
-            Wirtschaft</a></strong> und absolvierte Executive-Kurse an der <strong><a href="https://www.jbs.cam.ac.uk/"
-            target="_blank">Wirtschaftsschule der Universität Cambridge</a></strong>, wobei er praktische
-        Erfahrungen bei einem
-        zweisprachigen Risikokapitalunternehmen und einem führenden Wertpapierunternehmen in China sammelte.
+        Ein Wissenschaftler aus Überzeugung hat er seinen Doktortitel in <strong>erneuerbaren Energien</strong> an
+        der
+        <strong><a href="https://ethz.ch/en.html" target="_blank">ETH Zürich</a></strong> in Zusammenarbeit mit dem
+        <strong><a href="https://psi.ch" target="_blank">Paul Scherrer Institut</a></strong> in der Schweiz
+        erworben.
+        Zuvor erwarb er
+        einen MSc in Materialwissenschaften an der <strong><a href="https://tum.de" target="_blank">TU
+            München</a></strong> mit Praktika am <strong><a href="https://xfel.eu" target="_blank">European
+            XFEL</a></strong> und <strong><a href="https://infineon.com" target="_blank">Infineon</a></strong> in
+        Deutschland. Seine Leidenschaft für wirkungsvolle Forschung hat zu einer langfristigen Zusammenarbeit mit
+        Branchenführern im
+        Bereich Wasserstoff und Brennstoffzellen geführt, darunter <strong>Toyota Motor</strong> in Japan und
+        <strong>Freudenberg Gruppe</strong>
+        in Deutschland. In der Verfolgung interdisziplinärer Horizonte erwarb er einen <strong>MBA</strong> an der
+        <strong><a href="https://quantic.edu/mba" target="_blank">Quantische Schule für Wirtschaft</a></strong> mit
+        weiterer
+        Weiterbildung an der <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">Wirtschaftsschule der
+            Universität Cambridge</a></strong> und
+        sammelte praktische Erfahrungen in einem dualen Währungs-Venture-Capital-Unternehmen und einem führenden
+        Wertpapierunternehmen in China.
       </p>
 
       <p style="text-align:left;">
@@ -719,7 +737,8 @@
                 class='blue'>scholar.h-xu.com/de-contact</span></a> (Bitte schreiben Sie mir eine
             Nachricht)<br /></li>
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                class='blue'>h.xu [at] tum.de</span></a> (Für Zusammenarbeit, Beratung oder Interviews, kontaktieren Sie
+                class='blue'>h.xu [at] tum.de</span></a> (Für Zusammenarbeit, Beratung oder Interviews, kontaktieren
+            Sie
             mich bitte!)<br /></li>
           <li><strong>Online-Meeting</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1-zu-1-Meeting, bitte im Voraus buchen)</li>
