--- a/en.html
+++ b/en.html
@@ -517,12 +517,14 @@
       <p align="justify">
         <span class="display-mobile">Greetings, friends from <span id="location2">the World</span>! <br><br></span>
 
-        Dr. Hong Xu is a passionate <strong>Researcher</strong> and <strong>Engineer</strong> specializing in
+        Currently, Dr. Hong Xu is a dedicated <strong>Researcher</strong> and <strong>Engineer</strong> specializing in
         <strong>Renewable Energy</strong> and <strong>e-Power Systems</strong>, striving for Efficiency Excellence and
         Carbon Neutrality within the Energy and Transport sectors. Over the past 10 years, he has worked with
         multinational corporations and leading institutions across the Eurasian continent, driving technical
         advancements in <strong>e-Mobility</strong>, <strong>Clean Energy</strong>, and <strong>New Materials</strong>
-        industries with <strong>15 papers</strong> published and <strong>3 patents</strong> granted. Alongside his
+        industries with <strong><span class="no_of_papers"></span> papers</strong> published and <strong><span
+            class="no_of_patents"></span>
+          patents</strong> granted. Alongside his
         engineering pursuits, Dr. Xu has
         engaged with renowned organizations, notably St. Gallen Symposium, Salzburg Global Seminar, CITIC Securities,
         and Oxford Institute for Energy Studies, focusing on Clean <strong>Energy Economics and Policy</strong> analysis
