--- a/es.html
+++ b/es.html
@@ -544,38 +544,59 @@
       <p align="justify">
         <span class="display-mobile">Bienvenidos amigos de <span id="location2">mundo</span> :-)</br></br></span>
 
-        Actualmente, el Dr. Hong Xu trabaja como <strong>Ingeniero de I+D</strong> especializado en <strong>Sistemas
-          e-Power</strong> con sede en Múnich, dedicado a lograr la neutralidad de carbono en los sectores de
-        <strong>Energía</strong> y <strong>Transporte</strong>. A lo largo de su carrera, ha trabajado con corporaciones
-        internacionales e instituciones académicas en Europa y China, logrando más de <strong><span
-            class="no_of_papers"></span> artículos
-          publicados</strong> y <strong><span class="no_of_patents"></span> patentes otorgadas</strong>. Además,
-        presidió una sesión en la <strong><a href="https://unfccc.int/" target="_blank">Conferencia de la ONU sobre el
-            Cambio Climático</a></strong> en Bonn, participó en el Grupo de Expertos de la <strong><a
-            href="https://unece.org/" target="_blank">Comisión Económica de la ONU para Europa</a></strong> con sede en
-        Ginebra, y sirvió como miembro del <strong>Jurado Académico</strong> en el <strong><a
-            href="https://symposium.org/" target="_blank">Simposio de St. Gallen</a></strong> en Suiza. El Dr. Xu
-        también es <strong>revisor</strong> para varias revistas de alto impacto en los campos de
-        <strong>Energía</strong>, <strong>Transporte</strong> y <strong>Sostenibilidad</strong>. Sus esfuerzos
-        interdisciplinarios han sido reconocidos con premios como la beca del Banco Santander, la beca de viaje y
-        artículos invitados de ECS, la beca Intel Edge AI y la beca Erasmus.
-      </p>
+        Actualmente, el Dr. Hong Xu es un <strong>Investigador</strong> y <strong>Ingeniero</strong> comprometido,
+        especializado en
+        <strong>energías renovables</strong> y <strong>sistemas e-Power</strong>, esforzándose por alcanzar
+        la excelencia en eficiencia y
+        la neutralidad de carbono en los sectores de la energía y el transporte.
+        En los últimos 10 años, ha
+        trabajado con
+        multinacionales y principales instituciones a lo largo del continente euroasiático, impulsando avances
+        técnicos en
+        las industrias de <strong>e-Movilidad</strong>, <strong>energía limpia</strong> y <strong>nuevos
+          materiales</strong>
+        con <strong><span class="no_of_papers"></span> artículos</strong> publicados y <strong><span
+            class="no_of_patents"></span>
+          patentes</strong> concedidas. Junto a sus
+        actividades de ingeniería, el Dr. Xu ha
+        colaborado con organizaciones reconocidas, incluyendo el St. Gallen Symposium, el Salzburg Global Seminar, CITIC
+        Securities,
+        y el Oxford Institute for Energy Studies, centrando su atención en el análisis de la <strong>economía de la
+          energía limpia
+          y la política</strong>
+        en Asia y
+        Europa. Como contribuyente proactivo al desarrollo internacional, el Dr. Xu ha sido miembro del Grupo de
+        Expertos (GE) en
+        la <strong><a href="https://unece.org/" target="_blank">Comisión Económica de las Naciones Unidas
+            para Europa</a></strong> (UNECE) en Ginebra, y ha presidido sesiones paralelas en la <strong><a
+            href="https://unfccc.int/" target="_blank">Conferencia de las Naciones Unidas sobre el Cambio
+            Climático</a></strong> (UNFCCC) en Bonn,
+        abogando por los <strong><a href="https://sdgs.un.org/goals" target="_blank">Objetivos de Desarrollo Sostenible
+            de la ONU</a></strong> (ODS) <strong>7</strong> (Energía Asequible), <strong>9</strong> (Innovación
+        Industrial),
+        y
+        <strong>13</strong> (Acción Climática).
 
       <p align="justify">
-        Obtuvo su doctorado en <strong>Energías Renovables</strong> en la <strong><a href="https://ethz.ch/en.html"
-            target="_blank">Escuela Politécnica Federal de Zúrich</a></strong>, en colaboración con el <strong><a
-            href="https://psi.ch" target="_blank">Instituto Paul Scherrer</a></strong> en Suiza. Antes de eso, recibió
-        un máster en Ciencias de los Materiales de la <strong><a href="https://tum.de" target="_blank">Universidad
-            Técnica de Múnich</a></strong> con prácticas en el <strong><a href="https://xfel.eu" target="_blank">XFEL
-            Europeo</a></strong> y en <strong><a href="https://infineon.com" target="_blank">Infineon</a></strong> en
-        Alemania. La pasión del Dr. Xu por la investigación con impacto le ha llevado a compromisos a largo plazo con
-        líderes de la industria en hidrógeno y pilas de combustible, incluyendo <strong>Toyota Motor</strong> en Japón y
-        el <strong>Grupo Freudenberg</strong> en Alemania. Paralelamente, obtuvo un <strong>MBA</strong> en la
-        <strong><a href="https://quantic.edu/mba" target="_blank">Escuela de Negocios Cuántica</a></strong> y completó
-        cursos ejecutivos en la <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">Escuela de Negocios Judge
-            de Cambridge</a></strong>, adquiriendo experiencia práctica en una firma de capital de riesgo de doble
-        moneda y una compañía de valores líder en China.
+        Universitario de corazón, obtuvo su doctorado en <strong>energías renovables</strong> en el <strong><a
+            href="https://ethz.ch/en.html" target="_blank">Politécnico Federal de Zúrich</a></strong>, en
+        colaboración con el <strong><a href="https://psi.ch" target="_blank">Instituto Paul Scherrer</a></strong> en
+        Suiza. Antes de eso, obtuvo un MSc en Ciencias de Materiales en la <strong><a href="https://tum.de"
+            target="_blank">Universidad Técnica de Múnich</a></strong> con prácticas en el <strong><a
+            href="https://xfel.eu" target="_blank">XFEL europeo</a></strong> y en <strong><a href="https://infineon.com"
+            target="_blank">Infineon</a></strong> en
+        Alemania. Su pasión por la investigación impactante lo ha llevado a un compromiso a largo plazo con líderes de
+        la industria en
+        hidrógeno y pilas de hidrógeno, incluyendo <strong>Toyota Motor</strong> en Japón y el <strong>Grupo
+          Freudenberg</strong>
+        en Alemania. En busca de horizontes interdisciplinares, obtuvo un <strong>MBA</strong> en la <strong><a
+            href="https://quantic.edu/mba" target="_blank">Escuela de Negocios Cuántica</a></strong> con formación
+        Ejecutiva adicional en la <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">Escuela de Negocios de
+            la Universidad de Cambridge</a></strong>, adquiriendo
+        experiencia práctica en una firma de capital de riesgo de doble moneda y en una empresa líder de valores
+        mobiliarios en China.
       </p>
+
 
 
       <p style="text-align:left;">
