--- a/fr.html
+++ b/fr.html
@@ -577,39 +577,59 @@
       <p align="justify">
         <span class="display-mobile">Bienvenue aux amis <span id="location2">du monde</span> :-)</br></br></span>
 
-        Actuellement, le Dr. Hong Xu est <strong>Ingénieur en R&D</strong> spécialisé dans les <strong>systèmes
-          e-Power</strong> basé à Munich, dédié à la réalisation de la neutralité carbone dans les secteurs de
-        <strong>l'énergie</strong> et des <strong>transports</strong>. Au cours de sa carrière, il a travaillé avec des
-        entreprises internationales et des institutions académiques en Europe et en Chine, réalisant plus de
-        <strong><span class="no_of_papers"></span>
-          articles publiés</strong> et <strong><span class="no_of_patents"></span> brevets accordés</strong>.
-        De plus, il a présidé une session à la <strong><a href="https://unfccc.int/" target="_blank">Conférence de l'ONU
-            sur les changements climatiques</a></strong> à Bonn, a participé au Groupe d'experts de la <strong><a
-            href="https://unece.org/" target="_blank">Commission économique de l'ONU pour l'Europe</a></strong> basée à
-        Genève, et a servi en tant que <strong>Jury académique</strong> au <strong><a href="https://symposium.org/"
-            target="_blank">Symposium de St. Gallen</a></strong> en Suisse. Le Dr. Xu est également
-        <strong>examinateur</strong> pour plusieurs revues à fort impact dans les domaines de
-        <strong>l'énergie</strong>, des <strong>transports</strong> et de la <strong>durabilité</strong>. Ses efforts
-        interdisciplinaires ont été reconnus par des récompenses telles que la bourse de la Banque Santander, l'article
-        invité par l'ECS et la bourse de voyage, la bourse Intel Edge AI et la bourse Erasmus.
-      </p>
+        Actuellement, le Dr. Hong Xu est un <strong>Chercheur</strong> et <strong>Ingénieur</strong> engagé, spécialisé
+        dans
+        <strong>l'Énergie Renouvelable</strong> et <strong>les Systèmes e-Power</strong>, s'efforçant d'atteindre
+        l'Excellence en Efficacité et
+        la Neutralité Carbone dans les secteurs de l'Énergie et du Transport.
+        Au cours des 10 dernières années, il a
+        travaillé avec
+        des multinationales et des institutions de premier plan à travers le continent eurasien, propulsant des avancées
+        techniques dans
+        les industries de <strong>l'e-Mobilité</strong>, de <strong>l'Énergie Propre</strong> et de <strong>Nouvelle
+          Matériaux</strong>
+        avec <strong><span class="no_of_papers"></span> articles</strong> publiés et <strong><span
+            class="no_of_patents"></span>
+          brevets</strong> accordés. En parallèle de ses
+        activités d'ingénierie, le Dr. Xu a
+        collaboré avec des organisations renommées, notamment le St. Gallen Symposium, le Salzburg Global Seminar, CITIC
+        Securities,
+        et l'Oxford Institute for Energy Studies, se concentrant sur l'analyse de l'économie de <strong>l'Énergie Propre
+          et de la Politique</strong>
+        en Asie et
+        en Europe. En tant que contributeur proactif au développement international, le Dr. Xu a été membre du Groupe
+        d'Experts (GE) à
+        la <strong><a href="https://unece.org/" target="_blank">Commission Économique des Nations Unies
+            pour l'Europe</a></strong> (UNECE) à Genève, et a présidé des sessions parallèles à la <strong><a
+            href="https://unfccc.int/" target="_blank">Conférence des Nations Unies sur les Changements
+            Climatiques</a></strong> (UNFCCC) à Bonn,
+        plaidant en faveur des <strong><a href="https://sdgs.un.org/goals" target="_blank">Objectifs de Développement
+            Durable</a></strong> (ODD) <strong>7 </strong>(Énergie Abordable), <strong>9 </strong>(Innovation
+        Industrielle),
+        et
+        <strong>13 </strong>(Action Climatique).
 
       <p align="justify">
-        Il a poursuivi son doctorat en <strong>énergies renouvelables</strong> à l'<strong><a
+        Un universitaire dans l'âme, il a poursuivi son doctorat en <strong>Énergie Renouvelable</strong> à l'<strong><a
             href="https://ethz.ch/en.html" target="_blank">École polytechnique fédérale de Zurich</a></strong>, en
         collaboration avec l'<strong><a href="https://psi.ch" target="_blank">Institut Paul Scherrer</a></strong> en
-        Suisse. Auparavant, il a obtenu un master en science des matériaux de l'<strong><a href="https://tum.de"
-            target="_blank">Université technique de Munich</a></strong> avec des stages au <strong><a
-            href="https://xfel.eu" target="_blank">XFEL européen</a></strong> et chez <strong><a
-            href="https://infineon.com" target="_blank">Infineon</a></strong> en Allemagne. La passion du Dr. Xu pour la
-        recherche à fort impact l'a conduit à s'engager à long terme avec des leaders de l'industrie dans le domaine de
-        l'hydrogène et des piles à combustible, y compris <strong>Toyota Motor</strong> au Japon et le <strong>groupe
-          Freudenberg</strong> en Allemagne. Parallèlement, il a suivi un <strong>MBA</strong> à l'<strong><a
-            href="https://quantic.edu/mba" target="_blank">École de commerce quantique</a></strong> et a suivi des cours
-        exécutifs à l'<strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">École de commerce de l'Université de
-            Cambridge</a></strong>, acquérant une expérience pratique dans une entreprise de capital-risque en monnaie
-        duale et une société de valeurs mobilières leader en Chine.
+        Suisse. Avant cela, il
+        a obtenu un MSc en Science des Matériaux à l'<strong><a href="https://tum.de" target="_blank">Université
+            Technique de
+            Munich</a></strong> avec des stages au <strong><a href="https://xfel.eu" target="_blank">XFEL
+            européen</a></strong> et à <strong><a href="https://infineon.com" target="_blank">Infineon</a></strong> en
+        Allemagne. Sa passion pour la recherche impactante l'a conduit à un engagement à long terme avec des leaders de
+        l'industrie dans
+        l'hydrogène et les piles à hydrogène, notamment <strong>Toyota Motor</strong> au Japon et le <strong>Groupe
+          Freudenberg</strong>
+        en Allemagne. Dans sa quête d'horizons interdisciplinaires, il a obtenu un <strong>MBA</strong> à l'<strong><a
+            href="https://quantic.edu/mba" target="_blank">École de commerce quantique</a></strong> avec une formation
+        Executive complémentaire à l'<strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">École de commerce de
+            l'Université de Cambridge</a></strong>, acquérant
+        une expérience pratique dans une société de capital-risque à double devise et une entreprise de valeurs
+        mobilières de premier plan en Chine.
       </p>
+
 
 
       <p style="text-align:left;">
