--- a/it.html
+++ b/it.html
@@ -576,42 +576,57 @@
       <p align="justify">
         <span class="display-mobile">Benvenuti amici <span id="location2">dal mondo</span> :-)</br></br></span>
 
-        Attualmente, il Dott. Hong Xu è un <strong>Ingegnere R&D</strong> specializzato in <strong>Sistemi
-          e-Power</strong> con sede a Monaco di Baviera, dedicato a raggiungere la neutralità carbonica nei settori
-        <strong>Energia</strong> e <strong>Trasporti</strong>. Nel corso della sua carriera, ha lavorato con aziende
-        internazionali e istituzioni accademiche in Europa e Cina, pubblicando oltre <strong><span
-            class="no_of_papers"></span> articoli</strong> con
-        quasi <strong><span class="google_scholar_citation"></span> citazioni</strong> e ottenendo <strong><span
+
+        Attualmente, il Dott. Hong Xu è un <strong>Ricercatore</strong> e <strong>Ingegnere</strong> dedicato,
+        specializzato in
+        <strong>Energia Rinnovabile</strong> e <strong>Sistemi e-Power</strong>, che si impegna per l'Eccellenza
+        Energetica e la Neutralità Carbonica nei settori dell'Energia e dei Trasporti. Negli ultimi 10 anni, ha lavorato
+        con
+        multinazionali e istituzioni di punta in tutto il continente eurasiatico, promuovendo avanzamenti tecnici
+        nelle industrie di <strong>e-Mobilità</strong>, <strong>Energia Pulita</strong> e <strong>Nuovi
+          Materiali</strong>
+        con <strong><span class="no_of_papers"></span> articoli</strong> pubblicati e <strong><span
             class="no_of_patents"></span>
-          brevetti</strong>. Inoltre, ha presieduto una
-        sessione alla <strong><a href="https://unfccc.int/" target="_blank">Conferenza delle Nazioni Unite sui
-            Cambiamenti Climatici</a></strong> a Bonn, ha partecipato al Gruppo di Esperti della <strong><a
-            href="https://unece.org/" target="_blank">Commissione Economica per l'Europa delle Nazioni
-            Unite</a></strong> con sede a Ginevra, e ha servito come membro della <strong>Giuria Accademica</strong> al
-        <strong><a href="https://symposium.org/" target="_blank">Simposio di St. Gallen</a></strong> in Svizzera. Il
-        Dott. Xu è anche un <strong>Revisore</strong> per diverse riviste ad alto impatto nei campi
-        <strong>Energia</strong>, <strong>Trasporti</strong> e <strong>Sostenibilità</strong>. I suoi sforzi
-        interdisciplinari sono stati riconosciuti con premi tra cui la Borsa di Studio Santander Bank, l'ECS Travel
-        Grant, l'Intel Edge AI Scholarship e l'Erasmus Scholarship.
-      </p>
+          brevetti</strong> concessi. Insieme alle sue
+        attività ingegneristiche, il Dott. Xu ha
+        collaborato con organizzazioni rinomate, in particolare il St. Gallen Symposium, il Salzburg Global Seminar,
+        CITIC Securities,
+        e l'Oxford Institute for Energy Studies, concentrandosi sull'analisi delle <strong>Economia e Politiche
+          Energetiche Pulite</strong>
+        in Asia e
+        Europa. Come contributore attivo allo sviluppo internazionale, il Dott. Xu ha servito come Membro del Gruppo di
+        Esperti (GE)
+        presso
+        la <strong><a href="https://unece.org/" target="_blank">Commissione Economica delle Nazioni Unite
+            per l'Europa</a></strong> (UNECE) a Ginevra, e ha presieduto sessioni parallele alla <strong><a
+            href="https://unfccc.int/" target="_blank">Conferenza delle Nazioni Unite sui Cambiamenti
+            Climatici</a></strong> (UNFCCC) a Bonn,
+        sostenendo i <strong><a href="https://sdgs.un.org/goals" target="_blank">Obiettivi di sviluppo
+            sostenibile</a></strong> (SDGs) <strong>7</strong> (Energia Accessibile), <strong>9</strong> (Innovazione
+        Industriale),
+        e
+        <strong>13</strong> (Azione per il Clima).
 
       <p align="justify">
-        Ha conseguito il dottorato in <strong>Energia Rinnovabile</strong> presso il <strong><a
+        Universitario nel cuore, ha conseguito il dottorato in <strong>Energia Rinnovabile</strong> presso il <strong><a
             href="https://ethz.ch/en.html" target="_blank">Politecnico federale di Zurigo</a></strong>, in
-        collaborazione con il <strong><a href="https://psi.ch" target="_blank">Paul Scherrer Institute</a></strong> in
-        Svizzera. Prima di ciò, ha ottenuto un Master in Scienza dei Materiali presso il <strong><a
-            href="https://tum.de" target="_blank">Università Tecnica di Monaco di Baviera</a></strong> con tirocini
-        presso l'<strong><a href="https://xfel.eu" target="_blank">European XFEL</a></strong> e <strong><a
-            href="https://infineon.com" target="_blank">Infineon</a></strong> in Germania. La passione del Dott. Xu per
-        la ricerca ad alto impatto lo ha portato a collaborare a lungo termine con leader del settore dell'idrogeno e
-        delle celle a combustibile, tra cui <strong>Toyota Motor</strong> in Giappone e <strong>Freudenberg
-          Group</strong> in Germania. Parallelamente, ha conseguito un <strong>MBA</strong> presso la <strong><a
-            href="https://quantic.edu/mba" target="_blank">Scuola Quantica di Commercio</a></strong> e ha completato
-        corsi executive presso la <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">Scuola di Commercio
-            dell'Università di Cambridge</a></strong>, acquisendo esperienza pratica in una società di venture capital a
-        doppia valuta e in una delle principali società di titoli in Cina.
+        collaborazione con l'<strong><a href="https://psi.ch" target="_blank">Istituto Paul Scherrer</a></strong> in
+        Svizzera. Prima di ciò, ha
+        ottenuto un MSc in Scienza dei Materiali presso la <strong><a href="https://tum.de" target="_blank">Tecnica
+            Università di Monaco di Baviera</a></strong> con tirocini presso il <strong><a href="https://xfel.eu"
+            target="_blank">XFEL europeo</a></strong> e <strong><a href="https://infineon.com"
+            target="_blank">Infineon</a></strong> in
+        Germania. La sua passione per la ricerca di impatto lo ha portato a un impegno a lungo termine con i leader del
+        settore
+        dell'idrogeno e delle celle a combustibile, inclusa <strong>Toyota Motor</strong> in Giappone e
+        <strong>Freudenberg Group</strong>
+        in Germania. In cerca di orizzonti interdisciplinari, ha conseguito un <strong>MBA</strong> presso la <strong><a
+            href="https://quantic.edu/mba" target="_blank">Scuola Quantica di Commercio</a></strong> con ulteriori
+        formazione Executive presso la <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">Scuola di Commercio
+            dell'Università di Cambridge</a></strong>, acquisendo
+        esperienza pratica in una società di venture capital a doppia valuta e in una delle principali società di valori
+        mobiliari in Cina.
       </p>
-
 
       <p style="text-align:left;">
         PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> <img id="country-flag"
