--- a/ar.html
+++ b/ar.html
@@ -552,36 +552,44 @@
         <span class="display-mobile" style="text-align: left;">مرحبًا، أصدقاء من <span
             id="location2">العالم</span>!</br></br></span>
 
-        حالياً، يعمل الدكتور هونغ شو كمهندس بحث وتطوير متخصص في <strong>أنظمة الطاقة الإلكترونية</strong> مقره ميونيخ،
-        ملتزماً بتحقيق الحياد الكربوني في قطاعات <strong>الطاقة</strong> و<strong>النقل</strong>. طوال مسيرته المهنية،
-        عمل مع شركات دولية ومؤسسات أكاديمية في أوروبا والصين، حيث نشر أكثر من <strong><span class="no_of_papers"></span>
-          ورقة بحثية</strong> بما يقارب
-        <strong><span class="google_scholar_citation"></span> اقتباس</strong>، وحصل على <strong><span
-            class="no_of_patents"></span> براءات
-          اختراع</strong>. بالإضافة إلى ذلك، رأس جلسة في <strong><a href="https://unfccc.int/" target="_blank">مؤتمر
-            الأمم المتحدة للتغير المناخي</a></strong> في بون، شارك في
-        مجموعة الخبراء في <strong><a href="https://unece.org/" target="_blank">اللجنة الاقتصادية لأوروبا التابعة للأمم
-            المتحدة</a></strong> بجنيف، وكان عضوًا في <strong>لجنة تحكيم أكاديمية</strong> في <strong><a
-            href="https://symposium.org/" target="_blank">منتدى سانت جالين</a></strong> في سويسرا. الدكتور شو أيضاً
-        مراجع لعدة مجلات ذات تأثير كبير في مجالات <strong>الطاقة</strong>، <strong>النقل</strong>،
-        و<strong>الاستدامة</strong>. تم تكريم جهوده التعددية التخصصات بجوائز منها منحة بنك سانتاندر، ورقة دعوة ECS ومنحة
-        سفر، ومنحة إنتل Edge AI، ومنحة إيراسموس، وغيرها.
-      </p>
+        حاليًا، الدكتور هونغ شو هو <strong>باحث</strong> و <strong>مهندس</strong> ملتزم، متخصص في
+        <strong>الطاقة المتجددة</strong> و <strong>أنظمة الطاقة الإلكترونية</strong>، يسعى لتحقيق
+        <strong>التميز في الكفاءة</strong> و <strong>الحياد الكربوني</strong> في قطاعات الطاقة والنقل.
+        على مدى السنوات العشر الماضية، عمل مع
+        الشركات المتعددة الجنسيات والمؤسسات الرائدة عبر القارة الأوراسية، مما دفع بالتقدم
+        التقني في الصناعات المتعلقة بـ <strong>التنقل الإلكتروني</strong> و <strong>الطاقة النظيفة</strong> و
+        <strong>المواد الجديدة</strong>
+        مع <strong><span class="no_of_papers"></span> مقالات</strong> منشورة و <strong><span
+            class="no_of_patents"></span>
+          براءات اختراع</strong> مُنحت. بالإضافة إلى أنشطته الهندسية، تعاون الدكتور شو
+        مع منظمات مرموقة، بما في ذلك ندوة سانت غالن، والندوة العالمية في سالزبورغ، وأوراق مالية CITIC،
+        ومعهد أكسفورد لدراسات الطاقة، مع التركيز على تحليل <strong>اقتصاديات الطاقة النظيفة والسياسات</strong>
+        في آسيا و
+        أوروبا. كإسهام نشط في التنمية الدولية، شغل الدكتور شو منصب عضو في مجموعة الخبراء (GE) في
+        <strong><a href="https://unece.org/" target="_blank">اللجنة الاقتصادية للأمم المتحدة
+            لأوروبا</a></strong> (UNECE) في جنيف، وترأس جلسات متوازية في <strong><a href="https://unfccc.int/"
+            target="_blank">مؤتمر الأمم المتحدة لتغير المناخ</a></strong> (UNFCCC) في بون،
+        مدافعًا عن <strong><a href="https://sdgs.un.org/goals" target="_blank">أهداف التنمية المستدامة للأمم
+            المتحدة</a></strong> (ODD) <strong>7</strong> (الطاقة الميسورة)، <strong>9</strong> (ابتكار الصناعة)،
+        و<strong>13</strong> (العمل المناخي).
 
       <p align="justify">
-        حصل على درجة الدكتوراه في <strong>الطاقة المتجددة</strong> من <strong><a href="https://ethz.ch/en.html"
-            target="_blank">معهد التكنولوجيا الاتحادي زيورخ</a></strong>، بالتعاون مع <strong><a href="https://psi.ch"
-            target="_blank">معهد بول شيرير</a></strong> في سويسرا. وقبل ذلك، حصل على درجة الماجستير في علوم المواد من
-        <strong><a href="https://tum.de" target="_blank">الجامعة التقنية في ميونيخ</a></strong> مع فترات تدريبية في
-        <strong><a href="https://xfel.eu" target="_blank">XFEL الأوروبية</a></strong> و<strong><a
-            href="https://infineon.com" target="_blank">إنفينيون</a></strong> في ألمانيا. شغف الدكتور شو بالبحث ذو
-        التأثير العميق أدى به إلى التزام طويل الأمد مع قادة الصناعة في مجالات الهيدروجين والخلايا الوقود، بما في ذلك
-        <strong>شركة تويوتا موتور</strong> في اليابان و<strong>مجموعة فرويدنبيرج</strong> في ألمانيا. بالتوازي، حصل على
-        درجة <strong>MBA</strong> في <strong><a href="https://quantic.edu/mba" target="_blank">مدرسة Quantic
-            للأعمال</a></strong> وأكمل دورات تنفيذية في <strong><a href="https://www.jbs.cam.ac.uk/"
-            target="_blank">مدرسة الأعمال جود بكمبريدج</a></strong>، مكتسباً خبرة عملية في شركة رأس المال المخاطر
-        بالعملة المزدوجة وشركة رائدة في الأوراق المالية في الصين.
+        باحث في العمق، حصل على درجة الدكتوراه في <strong>الطاقة المتجددة</strong> من <strong><a
+            href="https://ethz.ch/en.html" target="_blank">المعهد الفيدرالي السويسري للتكنولوجيا في زيورخ</a></strong>،
+        بالتعاون مع <strong><a href="https://psi.ch" target="_blank">معهد بول شيرر</a></strong> في سويسرا. قبل ذلك، حصل
+        على درجة الماجستير في علوم المواد من <strong><a href="https://tum.de" target="_blank">الجامعة التقنية في
+            ميونيخ</a></strong> مع تدريبات في <strong><a href="https://xfel.eu" target="_blank">XFEL
+            الأوروبي</a></strong> و<strong><a href="https://infineon.com" target="_blank">إنفينيون</a></strong> في
+        ألمانيا. قاد شغفه بالبحث المؤثر إلى انخراط طويل الأمد مع قادة الصناعة في
+        الهيدروجين وخلايا الوقود، بما في ذلك <strong>تويوتا موتور</strong> في اليابان و<strong>مجموعة فريدنبرغ</strong>
+        في ألمانيا. سعيًا نحو آفاق متعددة التخصصات، حصل على <strong>ماجستير إدارة الأعمال</strong> من <strong><a
+            href="https://quantic.edu/mba" target="_blank">مدرسة كوانتيك للأعمال</a></strong> مع مزيد من
+        التعليم التنفيذي في <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">كلية كيمبردج
+            للأعمال</a></strong>، مكتسبًا
+        خبرة عملية في شركة رأس المال المغامر ذات العملتين وشركة الأوراق المالية الرائدة في الصين.
       </p>
+
+
       <!---
     <p style="text-align:right;">
         PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> NEXT?
