--- a/kr.html
+++ b/kr.html
@@ -562,35 +562,39 @@
       <p align="justify">
         <span class="display-mobile">환영합니다, <span id="location2">지구</span>에서 온 친구들 :-）</br></br></span>
 
-        현재, 쉬홍
-        <!-- (
+        현재, 쉬홍 (
         <script
-          id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>세) -->
-        박사는 독일 산업계에서 <strong>신에너지 동력 시스템</strong> 전문가 엔지니어로 일하고 있으며, <strong>에너지와 교통</strong> 분야의 <strong>탄소 중립</strong>
-        실현에 전념하고 있습니다. 학위 취득 중 다국적 기업 및 중유럽 학술 기관과 협력하여 <strong><span class="no_of_papers"></span>편 이상의 논문</strong>을
-        발표하고, <strong><span class="google_scholar_citation"></span>회 이상
-          인용</strong>되었으며, <strong><span class="no_of_patents"></span>건의 특허</strong>를 획득했습니다. <strong><a
-            href="https://unfccc.int/" target="_blank">유엔 본
-            기후 변화 회의</a></strong>에서 "중국의 <strong>에너지 전환</strong>과 기술 혁신" 주제 세션을 주최하고, <strong><a
-            href="https://unece.org/" target="_blank">유엔 유럽 경제 위원회</a></strong>의 <strong>교통 및 기후 전문가 그룹</strong> 회의와
-        <strong>수소 에너지 작업 그룹</strong> 회의에 여러 차례 참여했습니다. 또한 에너지와 교통 분야의 고인용 저널의 <strong>심사위원</strong>, 스위스 <strong>세인트갈렌
-          국제 포럼</strong>의 <strong>학술 심사위원</strong>, 오스트리아 <strong>잘츠부르크 국제 심포지엄</strong>의 <strong>연구원</strong>으로도 활동하고
-        있습니다. 미국 전기화학회 논문 초청 및 여행 상, 인텔 엣지 AI 장학금, EU 에라스무스 장학금, "챌린지 컵" 창업 전국 동상 등을 수상했습니다.
-      </p>
+          id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>세)
+        박사는 <strong>연구원</strong> 및 <strong>엔지니어</strong>로서 <strong>재생 에너지</strong>와 <strong>e-전력 시스템</strong>을
+        전문으로 하며, 에너지 및 교통 분야에서 효율성 우수성과 탄소 중립성을 추구하고 있습니다.
+        지난 10년 동안 그는 유라시아 대륙 전역에서 다국적 기업 및 주요 기관들과 협력하여 <strong>e-모빌리티</strong>, <strong>청정 에너지</strong>, 및
+        <strong>신소재</strong> 산업의 기술 발전을 이끌어왔습니다.
+        <strong><span class="no_of_papers"></span> 개의 논문</strong>이 발표되었고 <strong><span class="no_of_patents"></span>
+          개의 특허</strong>가 부여되었습니다. 그의 엔지니어링 활동과 함께, 쉬홍 박사는
+        스위스 세인트 갈렌 심포지엄, 오스트리아 잘츠부르크-한국고등교육재단 글로벌 세미나, 중국 중신증권, 및 옥스퍼드 에너지 연구소와 같은 저명한
+        조직들과 협력하여 아시아와
+        유럽의 <strong>청정 에너지 경제 및 정책</strong> 분석에 집중해왔습니다. 국제 개발에 적극적으로 기여하며, 쉬홍 박사는
+        <strong><a href="https://unece.org/" target="_blank">유엔 유럽 경제 위원회</a></strong> (UNECE) 에서 전문가 그룹 (GE) 위원으로
+        활동했으며,
+        <strong><a href="https://unfccc.int/" target="_blank">유엔 기후 변화 회의</a></strong> (UNFCCC) 에서 병행 세션을 주재하며
+        <strong><a href="https://sdgs.un.org/goals" target="_blank">UN 지속 가능한 개발 목표</a></strong> (SDGs) <strong>7
+        </strong>(저렴한 에너지), <strong>9 </strong>(산업 혁신),
+        및 <strong>13 </strong>(기후 행동)을 옹호했습니다.
 
       <p align="justify">
-        그는 2021년 초에 <strong><a href="https://ethz.ch/en.html" target="_blank">취리히 연방 공과대학교</a></strong>에서 박사 학위를 받았으며,
-        스위스 에너지 연구 경쟁 센터의 <strong><a href="https://electrochemistry.ethz.ch/people/person-detail.html?persid=177926"
-            target="_blank">토마스 슈미트 교수</a></strong> 아래서 공부했습니다. 그의 학부, 석사, 박사 과정은 주로 <strong>탄소 중립/신 에너지</strong> 분야에
-        중점을 두고 있으며, <strong><a href="https://psi.ch" target="_blank">스위스 폴쉬어 연구소</a></strong>, <strong><a
-            href="https://oxfordenergy.org" target="_blank">영국 옥스포드 에너지 연구소</a></strong>, <strong><a
-            href="https://tum.de" target="_blank">독일 뮌헨 공과대학교</a></strong>, <strong><a
-            href="https://ecoledesponts.fr/en" target="_blank">프랑스 파리 고등도로교량대학</a></strong>, <strong><a
-            href="https://xfel.eu" target="_blank">EU 자유 전자 레이저</a></strong> 등의 국제 기관에서 연구 및 인턴십을 하였습니다. 또한 그는
-        <strong>토요타 자동차</strong>, <strong>인피니온 테크놀로지스</strong>, <strong>코르보 그룹</strong> 등과의 국제 기업과의 심층적인 연구 개발 협력도 진행하고
-        있습니다. 더불어, 그는 <strong><a href="https://quantic.edu/mba" target="_blank">미국 쿠앤틱 비즈니스 스쿨</a></strong>로부터 전액 장학금을
-        받고 원격 학습으로 MBA 학위를 받았으며, <strong>케임브리지 대학교 비즈니스 스쿨</strong>에서 "그린 전환" 기업 경영 과정을 배우기도 했으며, 주식 연구소(A주식 및 미국 주식)에서
-        개별 주식 및 산업 연구 보고서를 작성했으며, 이중화 펀드(시드 라운드➔A 라운드)에서 신 에너지 트랙 벤처 투자 실무에 종사하기도 했습니다.
+        그는 본질적으로 학자이며, <strong>재생 에너지</strong> 분야에서 <strong><a href="https://ethz.ch/en.html" target="_blank">취리히 연방
+            공과대학교</a></strong>에서 박사 학위를 취득하였으며, 스위스의 <strong><a href="https://psi.ch" target="_blank">폴 셔러
+            연구소</a></strong>와 협력하였습니다. 그 이전에는,
+        그는 <strong><a href="https://tum.de" target="_blank">뮌헨 공과대학교</a></strong>에서 재료 과학 석사 학위를 취득하였으며, <strong><a
+            href="https://xfel.eu" target="_blank">유럽 엑스레이 자유 전자 레이저 회사</a></strong> 및 <strong><a
+            href="https://infineon.com" target="_blank">인피니온</a></strong>에서 인턴십을 수행했습니다.
+        영향력 있는 연구에 대한 그의 열정은 그를 일본의 <strong>토요타 자동차</strong>와 독일의 <strong>프로이덴베르크 그룹</strong>과 같은 수소 및 연료 전지 산업의 산업
+        리더들과의 장기적인 관계로 이끌었습니다.
+        학제간 지평을 추구하며, 그는 <strong>경영학 석사 </strong>(MBA) 를 <strong><a href="https://quantic.edu/mba" target="_blank">퀀틱
+            비즈니스
+            스쿨</a></strong>에서 취득하였으며,
+        <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">케임브리지 대학교 경영대학원</a></strong>에서 추가적인 경영 교육을 받으며,
+        중국의 이중 통화 벤처 캐피탈 회사와 주요 증권 회사에서 실무 경험을 쌓았습니다.
       </p>
 
       <p style="text-align:left;">
