--- a/ru.html
+++ b/ru.html
@@ -543,44 +543,68 @@
         </span>
       </p>
 
+
+
       <p align="justify">
         <span class="display-mobile">Добро пожаловать, друзья из <span id="location2">всего мира</span>
           :-)</br></br></span>
-        В настоящее время доктор Хун Сюй занимает должность <strong>инженера по
-          НИОКР</strong>, специализирующегося на
-        <strong>системах электропитания</strong> с местом работы в Мюнхене, посвятив себя достижению углеродной
-        нейтральности в секторах <strong>энергетики</strong> и <strong>транспорта</strong>. За время своей карьеры он
-        сотрудничал с международными корпорациями и академическими учреждениями в Европе и Китае, опубликовав более
-        <strong><span class="no_of_papers"></span> научных статей</strong> с почти <strong><span
-            class="google_scholar_citation"></span>
-          цитированиями</strong> и получив <strong><span class="no_of_patents"></span>
-          патента</strong>. Кроме того, он возглавлял сессию на <strong><a href="https://unfccc.int/"
-            target="_blank">Конференции ООН по изменению климата</a></strong> в Бонне, участвовал в Группе экспертов
-        <strong><a href="https://unece.org/" target="_blank">Экономической комиссии ООН для Европы</a></strong> в Женеве
-        и был членом <strong>академического жюри</strong> на <strong><a href="https://symposium.org/"
-            target="_blank">Симпозиуме в Санкт-Галлене</a></strong> в Швейцарии. Доктор Шу также является рецензентом
-        для нескольких высокоценных журналов в области <strong>энергетики</strong>, <strong>транспорта</strong> и
-        <strong>устойчивого развития</strong>. Его междисциплинарные усилия были отмечены наградами, включая стипендию
-        Сантандер Банк, приглашение на ECS и стипендию на путешествие, стипендию Intel Edge AI, стипендию Эразмус и
-        другие.
-      </p>
+
+        В настоящее время доктор Хун Сюй является <strong>Исследователем</strong> и <strong>Инженером</strong>,
+        специализирующимся
+        в области <strong>Возобновляемой Энергии</strong> и <strong>Электроэнергетические системы</strong>, стремящимся
+        достичь
+        <strong>Совершенства в Эффективности</strong> и <strong>Углеродной Нейтральности</strong> в секторах Энергетики
+        и Транспорта.
+        За последние 10 лет он работал с многонациональными компаниями и ведущими учреждениями по всему евразийскому
+        континенту, продвигая
+        технические достижения в отраслях <strong>e-Мобильности</strong>, <strong>Чистой Энергии</strong> и
+        <strong>Новых Материалов</strong>
+        с <strong><span class="no_of_papers"></span> опубликованными статьями</strong> и <strong><span
+            class="no_of_patents"></span>
+          выданными патентами</strong>. Параллельно своей инженерной деятельности доктор Сюй сотрудничал с известными
+        организациями, включая
+        <strong>Симпозиум Святого Галлена</strong>, <strong>Салцбургский глобальный семинар</strong>, <strong>СИТИК
+          Ценные бумаги</strong>,
+        и <strong>Оксфордский институт энергетических исследований</strong>, сосредоточив внимание на анализе экономики
+        <strong>Чистой Энергии
+          и Политики</strong> в Азии и Европе. В качестве активного участника международного развития доктор Сюй был
+        членом Группы
+        Экспертов (GE) в <strong><a href="https://unece.org/" target="_blank">Европейской экономической комиссии
+            ООН</a></strong> (ЕЭК ООН)
+        в Женеве и председательствовал на параллельных сессиях на <strong><a href="https://unfccc.int/"
+            target="_blank">Конференции ООН
+            по изменению климата</a></strong> (РКИК ООН) в Бонне, выступая в защиту <strong><a
+            href="https://sdgs.un.org/goals" target="_blank">Целей
+            Устойчивого Развития</a></strong> (ЦУР) <strong>7</strong> (Доступная Энергия), <strong>9</strong>
+        (Промышленная Инновация)
+        и <strong>13</strong> (Климатические Действия).
 
       <p align="justify">
-        Он получил степень доктора философии в области <strong>возобновляемых источников энергии</strong> в <strong><a
-            href="https://ethz.ch/en.html" target="_blank">ЭФГ Цюриха</a></strong>, совместно с <strong><a
-            href="https://psi.ch" target="_blank">Институтом Пауля Шеррера</a></strong> в Швейцарии. До этого он получил
-        степень магистра по науке о материалах в <strong><a href="https://tum.de" target="_blank">Техническом
-            университете Мюнхена</a></strong>, проходя стажировки в <strong><a href="https://xfel.eu"
-            target="_blank">Европейском XFEL</a></strong> и <strong><a href="https://infineon.com"
-            target="_blank">Инфинеон</a></strong> в Германии. Страсть доктора Шу к научным исследованиям, оказывающим
-        влияние, привела его к долгосрочному взаимодействию с лидерами отрасли в области водорода и топливных элементов,
-        включая компанию <strong>Тойота Мотор</strong> в Японии и <strong>Группа Фройденберг</strong> в Германии.
-        Параллельно он получил степень <strong>МБА</strong> в <strong><a href="https://quantic.edu/mba"
-            target="_blank">Школе бизнеса Квантик</a></strong> и прошел исполнительные курсы в <strong><a
-            href="https://www.jbs.cam.ac.uk/" target="_blank">Школе бизнеса Кембриджского университета</a></strong>,
-        получив практический опыт в венчурной капитальной фирме с двойной валютой и в ведущей ценной бумагами компании в
-        Китае.
+        Будучи академиком в душе, он продолжил обучение в аспирантуре по <strong>Возобновляемой Энергии</strong> в
+        <strong><a href="https://ethz.ch/en.html" target="_blank">Швейцарском федеральном технологическом институте
+            Цюриха</a></strong>, в
+        сотрудничестве с <strong><a href="https://psi.ch" target="_blank">Институтом Пауля Шеррера</a></strong> в
+        Швейцарии. До этого он
+        получил степень магистра наук в области <strong>Науки о Материалах</strong> в <strong><a href="https://tum.de"
+            target="_blank">Техническом
+            университете Мюнхена</a></strong> с практикой в <strong><a href="https://xfel.eu"
+            target="_blank">Европейском XFEL</a></strong>
+        и <strong><a href="https://infineon.com" target="_blank">Infineon</a></strong> в Германии. Его страсть к
+        значимым исследованиям
+        привела к долгосрочному сотрудничеству с лидерами отрасли в области водорода и водородных топливных элементов, в
+        частности, с
+        <strong>Тойота Мотор</strong> в Японии и <strong>Группой Фройденберг</strong> в Германии. В поисках
+        междисциплинарных горизонтов
+        он получил <strong>МБА</strong> в <strong><a href="https://quantic.edu/mba" target="_blank">Квантовой
+            бизнес-школе</a></strong>
+        с дополнительным обучением для руководителей в <strong><a href="https://www.jbs.cam.ac.uk/"
+            target="_blank">Бизнес-школе
+            Кембриджского университета</a></strong>, приобретая практический опыт в двойной валютной венчурной компании
+        и ведущей
+        инвестиционной компании в Китае.
       </p>
+
+
       <p style="text-align:left;">
         PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> LHR (Hello)-> <img
           id="country-flag" class="flag-icon" src="" alt=""> ?
