--- a/jp.html
+++ b/jp.html
@@ -543,32 +543,41 @@
 
       <p align="justify">
         <span class="display-mobile">ようこそ、<span id="location2">地球</span>からの友達 :-）</br></br></span>
-        現在、徐泓
-        <!-- (
+        現在、徐泓 (
         <script
-          id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>歲) -->
-        博士はドイツの産業界で<strong>新エネルギー動力システム</strong>の専門エンジニアとして働いており、<strong>エネルギーと交通</strong>分野の<strong>カーボンニュートラル</strong>の実現に取り組んでいます。学位取得中に多国籍企業や中欧の学術機関と協力して<strong><span
-            class="no_of_papers"></span>本以上の論文</strong>を発表し、<strong><span
-            class="google_scholar_citation"></span>回以上引用</strong>され、<strong><span
-            class="no_of_patents"></span>つの特許</strong>を取得しました。<strong><a href="https://unfccc.int/"
-            target="_blank">国連ボン気候変動会議</a></strong>で「中国の<strong>エネルギー転換</strong>と技術革新」をテーマにした分科会を主催し、<strong><a
-            href="https://unece.org/"
-            target="_blank">国連欧州経済委員会</a></strong>の<strong>交通と気候専門家グループ</strong>会議や<strong>水素エネルギー作業部会</strong>会議にも多く参加しました。また、エネルギーと交通分野の高引用率ジャーナルの<strong>査読者</strong>、スイスの<strong>サンクトガレン国際フォーラム</strong>の<strong>学術審査員</strong>、オーストリアの<strong>ザルツブルク国際シンポジウム</strong>の<strong>研究員</strong>も務めています。アメリカ電気化学会の論文招待および旅行賞、インテルエッジAI奨学金、EUエラスムス奨学金、「チャレンジカップ」全国起業銅賞などを受賞しています。
-
-      </p>
+          id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>歳)
+        博士は <strong>研究者</strong> および <strong>エンジニア</strong>として <strong>再生可能エネルギー</strong>と <strong>e-電力システム</strong>を
+        専門にしており、エネルギーおよび交通分野で効率性の優秀さとカーボンニュートラリティを追求しています。
+        過去10年間、彼はユーラシア大陸全体で多国籍企業および主要機関と協力し、<strong>e-モビリティ</strong>、<strong>クリーンエネルギー</strong>、および
+        <strong>新素材</strong>産業の技術革新を推進してきました。
+        <strong><span class="no_of_papers"></span> 本の論文</strong>が発表され、<strong><span class="no_of_patents"></span>
+          件の特許</strong>が付与されました。彼のエンジニアリング活動とともに、徐博士は
+        スイスのセントガレンシンポジウム、オーストリアのザルツブルグ グローバルセミナー、中国の中信証券、及びオックスフォードエネルギー研究所などの著名な
+        組織と協力して、アジアと
+        ヨーロッパの<strong>クリーンエネルギー経済および政策</strong>分析に集中してきました。国際開発に積極的に貢献し、徐博士は
+        <strong><a href="https://unece.org/" target="_blank">国連欧州経済委員会</a></strong> (UNECE) の専門家グループ (GE) 委員として
+        活動し、
+        <strong><a href="https://unfccc.int/" target="_blank">国連気候変動会議</a></strong> (UNFCCC) において並行セッションを主催し
+        <strong><a href="https://sdgs.un.org/goals" target="_blank">国連持続可能な開発目標</a></strong> (SDGs) <strong>7
+        </strong>(手頃なエネルギー)、 <strong>9 </strong>(産業革新),
+        および <strong>13 </strong>(気候行動)を擁護しました。
 
       <p align="justify">
-        彼は2021年初に<strong><a href="https://ethz.ch/en.html" target="_blank">チューリッヒ連邦工科大学</a></strong>で博士号を取得し、<strong><a
-            href="https://electrochemistry.ethz.ch/people/person-detail.html?persid=177926"
-            target="_blank">トーマス・シュミット</a></strong>教授のもとで学びました。彼の学士、修士、博士の研究は主に<strong>炭素中和/新エネルギー</strong>分野に焦点を当てており、<strong><a
-            href="https://psi.ch" target="_blank">スイス・ポール・シラー研究所</a></strong>、<strong><a href="https://oxfordenergy.org"
-            target="_blank">イギリス・オックスフォードエネルギー研究所</a></strong>、<strong><a href="https://tum.de"
-            target="_blank">ドイツ工科大学ミュンヘン校</a></strong>、<strong><a href="https://ecoledesponts.fr/en"
-            target="_blank">フランス・パリ高等道路橋梁学校</a></strong>、<strong><a href="https://xfel.eu"
-            target="_blank">EU自由電子レーザー施設</a></strong>などの国際機関での研究やインターンシップを行いました。また、彼は<strong>トヨタ自動車</strong>、<strong>インフィニオンテクノロジーズ</strong>、<strong>フロイデンベルグ社</strong>などの国際企業との深い研究開発協力も行っています。さらに、彼はアメリカの<strong><a
-            href="https://quantic.edu/mba"
-            target="_blank">クオンティック・ビジネススクール</a></strong>から全額給付のMBA学位を受け取り、リモート学習を行い、<strong>ケンブリッジ大学ビジネススクール</strong>で"グリーン転換"企業経営コースを学び、株式研究所(A股＆米国株)で個別株および業界研究報告書を執筆し、双貨幣基金(シードラウンド➔Aラウンド)で新エネルギー分野のベンチャー投資実践に従事しました。
+        彼は本質的に学者であり、<strong>再生可能エネルギー</strong>分野で<strong><a href="https://ethz.ch/en.html"
+            target="_blank">チューリッヒ工科大学</a></strong>で博士号を取得し、スイスの<strong><a href="https://psi.ch"
+            target="_blank">ポール・シェラー研究所</a></strong>と協力しました。 その前に、
+        彼は<strong><a href="https://tum.de" target="_blank">ミュンヘン工科大学</a></strong>で材料科学の修士号を取得し、<strong><a
+            href="https://xfel.eu" target="_blank">欧州X線自由電子レーザー会社</a></strong>および<strong><a href="https://infineon.com"
+            target="_blank">インフィニオン</a></strong>でインターンシップを行いました。
+        影響力のある研究に対する彼の情熱は、彼を日本の<strong>トヨタ自動車</strong>やドイツの<strong>フロイデンベルクグループ</strong>などの水素および燃料電池産業の業界
+        リーダーとの長期的な関係へと導きました。
+        学際的な視野を追求し、彼は<strong>経営学修士</strong> (MBA) を<strong><a href="https://quantic.edu/mba" target="_blank">クアンティック
+            ビジネス
+            スクール</a></strong>で取得し、
+        <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">ケンブリッジ大学ビジネススクール</a></strong>で追加の経営教育を受け、
+        中国の二重通貨ベンチャーキャピタル会社と主要証券会社で実務経験を積みました。
       </p>
+
 
       <p style="text-align:left;">
         PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> <img id="country-flag"
