--- a/de.html
+++ b/de.html
@@ -569,16 +569,16 @@
         und <strong>13 </strong>(Maßnahmen zum Klimaschutz) eingesetzt.
 
       <p align="justify">
-        Ein Wissenschaftler aus Überzeugung hat er seinen Doktortitel in <strong>erneuerbaren Energien</strong> an
+        Ein Gelehrter im Herzen, promovierte er in <strong>erneuerbaren Energien</strong> an
         der
         <strong><a href="https://ethz.ch/en.html" target="_blank">ETH Zürich</a></strong> in Zusammenarbeit mit dem
-        <strong><a href="https://psi.ch" target="_blank">Paul Scherrer Institut</a></strong> in der Schweiz
-        erworben.
+        <strong><a href="https://psi.ch" target="_blank">Paul Scherrer Institut</a></strong> in der Schweiz.
         Zuvor erwarb er
         einen MSc in Materialwissenschaften an der <strong><a href="https://tum.de" target="_blank">TU
-            München</a></strong> mit Praktika am <strong><a href="https://xfel.eu" target="_blank">European
-            XFEL</a></strong> und <strong><a href="https://infineon.com" target="_blank">Infineon</a></strong> in
-        Deutschland. Seine Leidenschaft für wirkungsvolle Forschung hat zu einer langfristigen Zusammenarbeit mit
+            München</a></strong>, wo er Praktika am <strong><a href="https://xfel.eu" target="_blank">European
+            XFEL</a></strong> und bei <strong><a href="https://infineon.com" target="_blank">Infineon</a></strong> in
+        Deutschland absolvierte. Seine Leidenschaft für wirkungsvolle Forschung hat zu einer langfristigen
+        Zusammenarbeit mit
         Branchenführern im
         Bereich Wasserstoff und Brennstoffzellen geführt, darunter <strong>Toyota Motor</strong> in Japan und
         <strong>Freudenberg Gruppe</strong>
