--- a/es.html
+++ b/es.html
@@ -578,7 +578,7 @@
         <strong>13</strong> (Acción Climática).
 
       <p align="justify">
-        Universitario de corazón, obtuvo su doctorado en <strong>energías renovables</strong> en el <strong><a
+        Un académico de corazón, obtuvo su doctorado en <strong>energías renovables</strong> en el <strong><a
             href="https://ethz.ch/en.html" target="_blank">Politécnico Federal de Zúrich</a></strong>, en
         colaboración con el <strong><a href="https://psi.ch" target="_blank">Instituto Paul Scherrer</a></strong> en
         Suiza. Antes de eso, obtuvo un MSc en Ciencias de Materiales en la <strong><a href="https://tum.de"
