--- a/fr.html
+++ b/fr.html
@@ -610,7 +610,7 @@
         <strong>13 </strong>(Action Climatique).
 
       <p align="justify">
-        Un universitaire dans l'âme, il a poursuivi son doctorat en <strong>Énergie Renouvelable</strong> à l'<strong><a
+        Un érudit dans l'âme, il a poursuivi son doctorat en <strong>Énergie Renouvelable</strong> à l'<strong><a
             href="https://ethz.ch/en.html" target="_blank">École polytechnique fédérale de Zurich</a></strong>, en
         collaboration avec l'<strong><a href="https://psi.ch" target="_blank">Institut Paul Scherrer</a></strong> en
         Suisse. Avant cela, il
