--- a/it.html
+++ b/it.html
@@ -608,8 +608,8 @@
         <strong>13</strong> (Azione per il Clima).
 
       <p align="justify">
-        Universitario nel cuore, ha conseguito il dottorato in <strong>Energia Rinnovabile</strong> presso il <strong><a
-            href="https://ethz.ch/en.html" target="_blank">Politecnico federale di Zurigo</a></strong>, in
+        Un accademico nel cuore, ha conseguito il dottorato in <strong>Energia Rinnovabile</strong> presso il
+        <strong><a href="https://ethz.ch/en.html" target="_blank">Politecnico federale di Zurigo</a></strong>, in
         collaborazione con l'<strong><a href="https://psi.ch" target="_blank">Istituto Paul Scherrer</a></strong> in
         Svizzera. Prima di ciò, ha
         ottenuto un MSc in Scienza dei Materiali presso la <strong><a href="https://tum.de" target="_blank">Tecnica
