--- a/jp.html
+++ b/jp.html
@@ -563,7 +563,7 @@
         および <strong>13 </strong>(気候行動)を擁護しました。
 
       <p align="justify">
-        彼は本質的に学者であり、<strong>再生可能エネルギー</strong>分野で<strong><a href="https://ethz.ch/en.html"
+        心から学者であり、<strong>再生可能エネルギー</strong>分野で<strong><a href="https://ethz.ch/en.html"
             target="_blank">チューリッヒ工科大学</a></strong>で博士号を取得し、スイスの<strong><a href="https://psi.ch"
             target="_blank">ポール・シェラー研究所</a></strong>と協力しました。 その前に、
         彼は<strong><a href="https://tum.de" target="_blank">ミュンヘン工科大学</a></strong>で材料科学の修士号を取得し、<strong><a
