--- a/kr.html
+++ b/kr.html
@@ -582,7 +582,7 @@
         및 <strong>13 </strong>(기후 행동)을 옹호했습니다.
 
       <p align="justify">
-        그는 본질적으로 학자이며, <strong>재생 에너지</strong> 분야에서 <strong><a href="https://ethz.ch/en.html" target="_blank">취리히 연방
+        마음으로는 학자이고, <strong>재생 에너지</strong> 분야에서 <strong><a href="https://ethz.ch/en.html" target="_blank">취리히 연방
             공과대학교</a></strong>에서 박사 학위를 취득하였으며, 스위스의 <strong><a href="https://psi.ch" target="_blank">폴 셔러
             연구소</a></strong>와 협력하였습니다. 그 이전에는,
         그는 <strong><a href="https://tum.de" target="_blank">뮌헨 공과대학교</a></strong>에서 재료 과학 석사 학위를 취득하였으며, <strong><a
