--- a/cn.html
+++ b/cn.html
@@ -535,13 +535,14 @@
         <p align="justify">
           <span class="display-mobile">欢迎来自<span id="location2">地球</span>的朋友 :-）</br></br></span>
 
-          目前，徐泓博士在德国工业界担任<strong>新能源动力系统</strong>专家工程师，致力于实现<strong>能源与交通</strong>领域<strong>碳中和</strong>。攻读学位期间与跨国企业及中欧学术机构合作发表<strong>论文<span
+          目前，徐泓博士在德国工业界担任<strong>新能源动力系统</strong>专家工程师，致力于实现<strong>能源与交通</strong>领域效率提升与<strong>碳中和</strong>。攻读学位期间与跨国企业及中欧学术机构合作发表<strong>论文<span
               class="no_of_papers"></span>余篇</strong>，并获得<strong><span
               class="no_of_patents"></span>项专利授权</strong>。曾在<strong><a href="https://unfccc.int/"
               target="_blank">联合国波恩气候变化大会</a></strong>主持“中国<strong>能源转型</strong>与技术创新”主题分会，多次参与<strong><a
               href="https://unece.org/"
-              target="_blank">联合国欧洲经济委员会</a></strong>关于<strong>交通与气候专家组</strong>会议以及<strong>氢能工作小组</strong>会议讨论。同时他还担任多项能源和交通领域高引期刊的<strong>审稿人</strong>,
-          瑞士<strong>圣加仑国际论坛</strong>的<strong>学术评审</strong>。曾获得奥地利萨尔茨堡国际研讨会<strong>旅行奖</strong>、美国电化学学会<strong>论文邀请</strong>及旅行奖、欧盟伊拉斯谟奖学金、“挑战杯”创业全国铜奖等。
+              target="_blank">联合国欧洲经济委员会</a></strong>关于<strong>交通与气候专家组</strong>会议以及<strong>氢能工作小组</strong>会议讨论，积极倡导联合国可持续发展目标
+          (SDGs) 第7项 (清洁能源), 第9项 (产业创新), 以及第13项 (气候行动)。同时他还担任10余本能源与交通领域高引期刊的<strong>审稿人</strong>,
+          瑞士<strong>圣加仑国际论坛</strong>的<strong>学术评审</strong>。曾获得奥地利<strong>萨尔茨堡国际研讨会</strong>旅行奖、<strong>美国电化学学会</strong>论文邀请及旅行奖、欧盟伊拉斯谟奖学金、“挑战杯”创业全国铜奖等。
         </p>
 
         <p align="justify">
